fixed bug on profile

--- a/profile.html
+++ b/profile.html
@@ -199,7 +199,7 @@
         /* Hide theme bottom nav on profile page */
         nav[class], footer, .bottom-nav, .nav-bar, #bottom-nav, #nav-bar, .tab-bar { display: none !important; }
         .crop-source { display: block; width: 100%; user-select: none; pointer-events: none; }
-        .crop-frame { position: absolute; border: 2px solid var(--accent); box-shadow: 0 0 0 9999px rgba(0,0,0,0.6); pointer-events: none; }
+        .crop-frame { position: absolute; border: 2px solid var(--accent); box-shadow: 0 0 0 9999px rgba(0,0,0,0.6); pointer-events: none; display: none; }
         .crop-actions { display: flex; gap: 12px; margin-top: 20px; }
         .crop-btn { padding: 12px 30px; border-radius: 20px; border: none; font-weight: 800; cursor: pointer; font-size: 14px; }
         .crop-btn-confirm { background: var(--accent); color: #000; }
@@ -911,6 +911,7 @@
 
         function closeCropModal() {
             document.getElementById('crop-overlay').classList.remove('active');
+            document.getElementById('crop-frame').style.display = 'none';
         }
 
         function updateCropFrame() {
@@ -926,6 +927,7 @@
             frame.style.top = top + 'px';
             frame.style.width = frameW + 'px';
             frame.style.height = frameH + 'px';
+            frame.style.display = 'block';
             frame._top = top;
             frame._frameH = frameH;
         }
