fixed another issue

--- a/profile.html
+++ b/profile.html
@@ -198,6 +198,16 @@
 
         /* Hide theme bottom nav on profile page */
         nav[class], footer, .bottom-nav, .nav-bar, #bottom-nav, #nav-bar, .tab-bar { display: none !important; }
+        /* Banner crop overlay — hidden by default, shown via .active */
+        .crop-overlay {
+            display: none; position: fixed; inset: 0;
+            background: rgba(0,0,0,0.96); z-index: 9500;
+            flex-direction: column; align-items: center; justify-content: center;
+            padding: 20px;
+        }
+        .crop-overlay.active { display: flex; }
+        .crop-container { width: 100%; max-width: 600px; position: relative; overflow: hidden; cursor: grab; background: #000; border-radius: 8px; }
+        .crop-container:active { cursor: grabbing; }
         .crop-source { display: block; width: 100%; user-select: none; pointer-events: none; }
         .crop-frame { position: absolute; border: 2px solid var(--accent); box-shadow: 0 0 0 9999px rgba(0,0,0,0.6); pointer-events: none; display: none; }
         .crop-actions { display: flex; gap: 12px; margin-top: 20px; }
