fixed profile issues in console

--- a/profile.html
+++ b/profile.html
@@ -362,7 +362,7 @@
                 <img id="share-card-banner" class="share-card-banner" src="" style="display:none;">
                 <div id="share-card-banner-fallback" style="width:100%;height:80px;background:linear-gradient(135deg,#1a1a2e,#16213e);"></div>
                 <div class="share-card-body">
-                    <img id="share-card-pfp" class="share-card-pfp" src="" onerror="this.src='https://via.placeholder.com/64'">
+                    <img id="share-card-pfp" class="share-card-pfp" src="" onerror="this.style.display='none'">
                     <div id="share-card-name" class="share-card-name"></div>
                     <div id="share-card-handle" class="share-card-handle"></div>
                     <div id="share-card-bio" class="share-card-bio"></div>
