--- a/discover.html
+++ b/discover.html
@@ -427,10 +427,43 @@ z-index: 500; backdrop-filter: blur(12px);
 }
 .nav-item { font-size: 22px; cursor: pointer; opacity: .4; text-decoration: none; color: #f5f5f7; transition: .15s; }
 .nav-item.active { opacity: 1; color: #ff7a00; }
+
+/* ── Loading Screen ── */
+#loading-screen {
+  position: fixed; inset: 0; z-index: 99999;
+  background: #0f0f11;
+  display: flex; flex-direction: column;
+  align-items: center; justify-content: center;
+  gap: 20px;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+#loading-screen.hidden {
+  opacity: 0; visibility: hidden; pointer-events: none;
+}
+#loading-screen img {
+  width: 120px; height: 120px; object-fit: contain;
+  image-rendering: auto;
+}
+#loading-screen .loading-text {
+  font-size: 13px; font-weight: 800; color: #444;
+  letter-spacing: 2px; text-transform: uppercase;
+  animation: loadingPulse 1.2s ease-in-out infinite;
+}
+@keyframes loadingPulse {
+  0%, 100% { opacity: 0.3; }
+  50% { opacity: 1; }
+}
 </style>
 
 </head>
 <body>
+
+<!-- Loading Screen -->
+<div id="loading-screen">
+  <img src="https://media.discordapp.net/attachments/1472088820584419450/1475696543628656782/IMG_1899.gif?ex=699e6d01&is=699d1b81&hm=67222fde490cea1621bf751f5755e6d4188fbf1ea2db7be8292bef5258252ee5&=" alt="Loading...">
+  <div class="loading-text">Loading ComicCore…</div>
+</div>
+
 
 <!-- Header -->
 
@@ -800,6 +833,9 @@ function renderTopCreators(creators, tab) {
 async function init() {
   await loadFeeds();
   setupRealtime();
+  // Hide loading screen once all data is loaded
+  const loader = document.getElementById('loading-screen');
+  if (loader) loader.classList.add('hidden');
 }
 
 function setupRealtime() {
@@ -812,13 +848,19 @@ function setupRealtime() {
 }
 
 async function loadFeeds() {
-  const [{ data: comics }, { data: stars }, { data: teams }] = await Promise.all([
+  const [{ data: comics }, { data: stars }, { data: teams }, { data: validProfiles }] = await Promise.all([
     _sb.from('comics').select('*').order('created_at', { ascending: false }),
     _sb.from('messages').select('receiver_hand, sender_handle').eq('reaction','⭐'),
     _sb.from('team_tickets').select('*'),
+    _sb.from('profiles').select('handle'),
   ]);
 
-  allComics   = (comics || []).filter(c => c.title && (c.data?.length > 0 || c.cover));
+  // Build a Set of known handles so we can filter out orphaned/deleted accounts
+  const knownHandles = new Set((validProfiles || []).map(p => p.handle));
+
+  allComics   = (comics || []).filter(c =>
+    c.title && (c.data?.length > 0 || c.cover) && knownHandles.has(c.owner_handle)
+  );
   globalStars = stars || [];
 
   renderComics(allComics, globalStars);
