--- a/settings.html
+++ b/settings.html
@@ -69,24 +69,27 @@
     <div class="section-label">Privacy</div>
     <div class="settings-group">
         <div class="setting-item">
-            <div class="item-info"><span>Open for Team</span><small>Allow team members to contact you.</small></div>
-            <label class="switch"><input type="checkbox" id="privacy-team" onchange="saveSetting('cc-privacy-team', this.checked)"><span class="slider"></span></label>
-        </div>
-        <div class="setting-item">
-            <div class="item-info"><span>Direct Messages</span><small>Allow others to send you DMs.</small></div>
-            <label class="switch"><input type="checkbox" id="privacy-dm" onchange="saveSetting('cc-privacy-dm', this.checked)"><span class="slider"></span></label>
-        </div>
-        <div class="setting-item">
-            <div class="item-info"><span>Friend Requests</span><small>Allow others to send friend requests.</small></div>
-            <label class="switch"><input type="checkbox" id="privacy-friends" onchange="saveSetting('cc-privacy-friends', this.checked)"><span class="slider"></span></label>
-        </div>
-        <div class="setting-item">
             <div class="item-info"><span>Show Followers/Following</span><small>Let others tap your follower counts to see your connections list.</small></div>
             <label class="switch"><input type="checkbox" id="privacy-followers" onchange="saveSetting('cc-privacy-followers', this.checked)"><span class="slider"></span></label>
         </div>
+    </div>
+
+    <div class="section-label">Squads</div>
+    <div class="settings-group">
         <div class="setting-item">
-            <div class="item-info"><span>Message Requests</span><small>Allow others to send you friend/message requests.</small></div>
-            <label class="switch"><input type="checkbox" id="privacy-requests" onchange="saveSetting('cc-privacy-requests', this.checked)"><span class="slider"></span></label>
+            <div class="item-info"><span>Enable Squads</span><small>Show and allow access to the Squads feature.</small></div>
+            <label class="switch"><input type="checkbox" id="privacy-team" onchange="saveSetting('cc-privacy-team', this.checked)"><span class="slider"></span></label>
+        </div>
+        <div class="setting-item">
+            <div class="item-info"><span>Allow Squad Invites</span><small>Let squad owners send you join requests.</small></div>
+            <label class="switch"><input type="checkbox" id="privacy-squad-invites" onchange="saveSetting('cc-privacy-squad-invites', this.checked)"><span class="slider"></span></label>
+        </div>
+        <div class="setting-item" onclick="location.href='squads.html'" style="cursor:pointer;">
+            <div class="item-info">
+                <span>Browse Squads</span>
+                <small>Find and join squads on ComicCore.</small>
+            </div>
+            <span class="action-link">Go →</span>
         </div>
     </div>
 
@@ -194,11 +197,9 @@
         loadAccount();
         setTheme(localStorage.getItem('cc-theme') || 'dark');
         document.getElementById('privacy-team').checked = localStorage.getItem('cc-privacy-team') !== 'false';
-        document.getElementById('privacy-dm').checked = localStorage.getItem('cc-privacy-dm') !== 'false';
-        document.getElementById('privacy-friends').checked = localStorage.getItem('cc-privacy-friends') !== 'false';
+        document.getElementById('privacy-squad-invites').checked = localStorage.getItem('cc-privacy-squad-invites') !== 'false';
         document.getElementById('show-fps').checked = localStorage.getItem('cc-show-fps') === 'true';
         document.getElementById('privacy-followers').checked = localStorage.getItem('cc-privacy-followers') !== 'false';
-        document.getElementById('privacy-requests').checked = localStorage.getItem('cc-privacy-requests') !== 'false';
         document.getElementById('swipe-dir').value = localStorage.getItem('cc-swipe-dir') || 'creator';
         document.getElementById('sprite-quality').value = localStorage.getItem('cc-sprite-quality') || 'Medium';
     }
