update profile load

--- a/profile.html
+++ b/profile.html
@@ -252,7 +252,7 @@
 
 <div id="loading-screen">
     <img src="https://media.discordapp.net/attachments/1472088820584419450/1475696543628656782/IMG_1899.gif?ex=699e6d01&is=699d1b81&hm=67222fde490cea1621bf751f5755e6d4188fbf1ea2db7be8292bef5258252ee5&=" alt="Loading...">
-    <div class="loading-text">Loading ComicCore…</div>
+    <div class="loading-text">Loading Profile…</div>
 </div>
 
     <!-- Followers/Following modal -->
